обновление кода для Jenkins